<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_card"
    android:padding="@dimen/margin_large">

    <TextView
        android:id="@+id/tvConsentTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/consent_title"
        android:textSize="20sp"
        android:textColor="@color/accent_primary"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvConsentMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/consent_message"
        android:textSize="14sp"
        android:textColor="@color/text_secondary"
        android:lineSpacingMultiplier="1.3"
        app:layout_constraintTop_toBottomOf="@id/tvConsentTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConsentAgree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/consent_agree"
        app:backgroundTint="@color/accent_primary"
        app:cornerRadius="@dimen/corner_radius_medium"
        app:layout_constraintTop_toBottomOf="@id/tvConsentMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConsentDecline"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/consent_decline"
        android:textColor="@color/text_secondary"
        app:layout_constraintTop_toBottomOf="@id/btnConsentAgree"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
